--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div id="wrapper">
 
-        <header id="banner" class="scrollto clearfix" data-enllax-ratio=".5">
+        <header id="banner" class="scrollto clearfix" data-enllax-ratio=".1">
             <div id="header" class="nav-collapse">
                 <div class="row clearfix">
                     <div class="col-1">
@@ -157,7 +157,7 @@
 
         <div class="row clearfix">
 
-            <div class="col-2">
+            <div class="col-2-3">
                   <div class="section-heading">
                       <h2 class="section-title">About Me</h2>
                       <p>  </p>
@@ -165,7 +165,7 @@
 
             </div>
 
-            <div class="col-2">
+            <div class="col-3" style="padding-top: 90px;">
               <img style="text-align:center;" src="images/Headshot.png"></img>
             </div>
 
@@ -181,23 +181,23 @@
 
                 <div class="col-2-3">
 
-                    <a href="https://zhast.github.io/MoneySmart/index.html" class="col-3">
-                        <img src="images/MoneySmart.png" alt="MoneySmart"/>
+                    <a href="https://zhast.github.io/MoneySmart/index.html" target="_blank" class="col-3">
+                        <img id="project" src="images/MoneySmart.png" alt="MoneySmart"/>
                         <div class="Projects-overlay"><span> MoneySmart <br><br> A new financial literacy platform for high school students and young adults.</span></div>
                     </a>
 
-                    <a href="https://thacks2017.github.io/StockSee/" class="col-3">
-                        <img src="images/StockSee.jpg" alt="StockSee"/>
+                    <a href="https://thacks2017.github.io/StockSee/" target="_blank" class="col-3">
+                        <img id="project" src="images/StockSee.jpg" alt="StockSee"/>
                         <div class="Projects-overlay"><span> StockSee <br><br> A website created at THacks2 that predicts the trends of popular stock sectors.</span></div>
                     </a>
                   
-                    <a href="www.thesynapseconference.ca" class="col-3">
-                        <img src="images/Synapse.png" alt="Company"/>
+                    <a href="https://www.thesynapseconference.ca" target="_blank" class="col-3">
+                        <img id="project" src="images/Synapse.png" alt="Company"/>
                         <div class="Projects-overlay"><span> The Synapse Conference <br><br> A neuroscience and mental health conference for high school students. It will take place in April 2018.</span></div>
                     </a>
 
-                    <a href="#" class="col-3">
-                        <img src="images/ThermoBeat.png" alt="ThermoBeat"/>
+                    <a href="https://www.thermobeat.com" target="_blank" class="col-3">
+                        <img id="project" src="images/ThermoBeat.png" alt="ThermoBeat"/>
                         <div class="Projects-overlay"><span> ThermoBeat <br><br>  </span></div>
                     </a>
 
@@ -207,7 +207,7 @@
 
                     <div class="section-heading">
                         <h2 class="section-title">Projects</h2>
-                        <p class="section-subtitle">NEED. MORE. PROJECTS! Jokes aside, here are all the projects I have worked on. You can hover over the images of the projects to learn more about them. As well, you can click on them to go their website. I am always interested in working on more projects so please feel free to reach out to me.</p>
+                        <p class="section-subtitle">I love working on projects. I believe that they show you can work in a team and are passionate about its topic. Here are all the projects I have worked on. You can hover over the images of the projects to learn more about them. As well, you can click on them to go their website. <b> I am always interested in working on more projects so please feel free to reach out to me.</b> </p>
                     </div>
 
                 </div>
@@ -218,7 +218,7 @@
 
 
       <!--Skills-->
-      <section id="Skills" class="secondary-color text-center introduction clearfix scrollto">
+      <section id="Skills" class="secondary-color text-center clearfix scrollto">
 
             <div class="row clearfix">
 
@@ -294,17 +294,17 @@
       </section>
       <!--End of Skills-->
 
+      <!--Awards-->
+      <section id="Awards" class="text-center introduction clearfix scrollto" data-enllax-ratio=".2">
 
-      <section id="Awards" class="text-center clearfix scrollto" data-enllax-ratio=".2">
-
-        <div class="row clearfix">
+        <div class="row clearfix" style="padding-bottom:46px;">
 
                 <div class="section-heading">
-                    <h2 class="section-title">Awards</h2>
+                    <h2 class="section-title" style="padding-bottom:0px;">Awards</h2>
                 </div>
 
                 <!--Computer Science/Programming-->
-                <blockquote class="col-3 testimonial classic">
+                <blockquote class="col-3 testimonial classic" style="padding-top:0px;">
                     <img src="images/ComputerScience.jpg" alt="Computer Science/Programming"/>
                     <h4> <b> Computer Science/Programming </b> </h4>
                     <footer>
@@ -316,12 +316,12 @@
                 <!--End of Computer Science/Programming Block-->
 
                 <!--Mathematics Block-->
-                <blockquote class="col-3 testimonial classic">
+                <blockquote class="col-3 testimonial classic" style="padding-top:0px;">
                     <img src="images/Mathematics.jpg" alt="Mathematics"/>
                     <h4> <b> Mathematics </b> </h4>
                     <footer>
 
-                      <p> • Perfect Score on Pascal Math Contest (2016) <br> • 7th on Newton Math Contest (2015) <br> • 37th Place on Galois Math Contest (2017) <br> • Represented Upper Canada College at the Harvard MIT Mathematics Tournament (2016) <br> • 149th Place on Hypatia Math Contest (2015)</p>
+                      <p> • Perfect Score on Pascal Math Contest (2016) <br> • 7th on Newton Math Contest (2015) <br> • 37th Place on Galois Math Contest (2017) <br> • Represented Upper Canada College at the Harvard MIT Mathematics Tournament (2016)</p>
 
 
                     </footer>
@@ -329,7 +329,7 @@
                 <!--End of Mathematics Block-->
 
                 <!--Other Block-->
-                <blockquote class="col-3 testimonial classic">
+                <blockquote class="col-3 testimonial classic" style="padding-top:0px;">
                     <img src="images/Award.jpg" alt="Other"/>
                     <h4> <b> Other </b> </h4>
                     <footer>
@@ -343,30 +343,39 @@
             </div>
 
       </section>
+      <!--End of Awards-->
 
       <!--Contact-->
         <section id="Contact" class="secondary-color scrollto clearfix">
-            <div class="row clearfix">
+            <div class="row clearfix" style="padding-bottom:20px;">
 
-                <div class="col-2">
+                <div class="col-2-3">
                   <div class="section-heading">
-                      <h2 class="section-title">Contact</h2>
-                      <p> You've reached the end of my website. Awesome! Feel free to contact me via email. You can also use the integrated message form below. </p>
-                      <br>
-                      <br>
-                      <br>
-                      <br>
-                      <br>
-                      <br>
-                      <br>
-                      <br>
-                      <br>
-                      <br>
+                        <h2 class="section-title">Contact</h2>
+                        <p style="width: 105%;"> You've reached the end of my website. Awesome! Feel free to contact me via email. You can also use the integrated message form below. </p>
+                        <form>
+                            <div class="col-3">
+                                <input style="width: 100%; height: 45px; border-radius: 10px;" placeholder="Name"></input>
+                            </div>
+                            <div class="col-3">
+                                <input style="width: 100%; height: 45px; border-radius: 10px;" placeholder="Email"></input>
+                            </div>
+                            <div class="col-3">
+                                <input style="width: 100%; height: 45px; border-radius: 10px;" placeholder="Subject"></input>
+                            </div>
+                            <div class="col-1" style="padding-top: 0px;">
+                                <textarea placeholder="Message" style="height: 130px; width:100%; border-radius: 15px; font-size:15px; font-family: 'Open Sans', sans-serif, Arial, Helvetica; font-weight: normal; color: #111; "></textarea>
+                            </div>
+                            <div class="col-1" style="padding-top:0px; text-align: center;">
+                                <input type="submit" style="width: 15%; border-radius: 10px;"></input>
+                            </div>
+                        </form>
+
                   </div>
 
                 </div>
 
-                <div class="col-2" style="text-align: center; padding-top: 130px;">
+                <div class="col-3" style="text-align: center; padding-top: 170px;">
 
                   <!--Email-->
                   <h4> <b> <u> Email  </u> </b> </h4>
@@ -424,11 +433,30 @@
   <script src="js/featherlight.gallery.min.js"></script>
   <script src="js/jquery.enllax.min.js"></script>
   <script src="js/jquery.scrollUp.min.js"></script>
+  <script src="js/jquery.scrollHome.min.js"></script>
   <script src="js/jquery.easing.min.js"></script>
   <script src="js/jquery.stickyNavbar.min.js"></script>
   <script src="js/jquery.waypoints.min.js"></script>
   <script src="js/images-loaded.min.js"></script>
   <script src="js/lightbox.min.js"></script>
   <script src="js/site.js"></script>
+
+  <!--Zoom-->
+
+  <script>
+
+    $(document).ready(function() {
+
+        $("project").on('mouseenter', () => {
+            $(event.target).addClass('photo-active');
+        }).on('mouseleave', () => {
+            $(event.target).removeClass('photo-active');
+        });
+
+    });
+
+  </script>
+
+  <!--//Zoom-->
 
 </html>
