--- a/index.html
+++ b/index.html
@@ -139,9 +139,19 @@
                     <h2>This website is a portfolio of my projects, skills, awards, and contact information.</h2>
                 </div>
 
-                <!--Resume Button-->
-                  <a href="documents/JackDouglasResume.pdf" class="button" target="_blank">My Resume</a>
-                <!--End of Resume Button-->
+
+                <div style="overflow: hidden; white-space: nowrap;">
+                    <!--Resume Button-->
+                    <div style="display: inline;">
+                      <a href="documents/JackDouglasResume.pdf" class="button" target="_blank">My Resume</a>
+                    </div>
+                    <!--End of Resume Button-->
+                    <!--Newsletter-->
+                    <div style="display: inline; padding-left: 10px;">
+                      <a href="http://preview.mailerlite.com/s4c4e6" class="button" target="_blank">November Newsletter</a>
+                    </div>
+                    <!--End of Newsletter-->
+                </div>
 
             </div>
 
@@ -160,7 +170,7 @@
             <div class="col-2-3">
                   <div class="section-heading">
                       <h2 class="section-title">About Me</h2>
-                      <p>  </p>
+                      <p> Hey there! I'm Jack, a grade 11 student who attends Upper Canada College. I am passionate about artificial intelligence, cryptocurrency, robotics, and health technology. As well, I have developed a strong interest for web development. This is my first monthly newsletter update about what I have been doing and what's ahead. </p>
                   </div>
 
             </div>
@@ -187,8 +197,8 @@
                     </a>
 
                     <a href="https://thacks2017.github.io/StockSee/" target="_blank" class="col-3">
-                        <img id="project" src="images/StockSee.jpg" alt="StockSee"/>
-                        <div class="Projects-overlay"><span> StockSee <br><br> A website created at THacks2 that predicts the trends of popular stock sectors.</span></div>
+                        <img id="project" src="images/StockSee.png" alt="StockSee"/>
+                        <div class="Projects-overlay"><span> StockSee <br><br> A website created at the THacks2 hackathon that predicts the trends of popular stock sectors.</span></div>
                     </a>
                   
                     <a href="https://www.thesynapseconference.ca" target="_blank" class="col-3">
@@ -198,7 +208,7 @@
 
                     <a href="https://www.thermobeat.com" target="_blank" class="col-3">
                         <img id="project" src="images/ThermoBeat.png" alt="ThermoBeat"/>
-                        <div class="Projects-overlay"><span> ThermoBeat <br><br>  </span></div>
+                        <div class="Projects-overlay"><span> ThermoBeat <br><br> ThermoBeat is an innovative product that aims to replace modern pacemakers by eliminating the need for replacement through the utilization of thermal energy technology. </span></div>
                     </a>
 
                 </div>
@@ -229,7 +239,7 @@
                 <!--Skill 1-->
                 <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="pricing-block-content">
-                        <h3>Skill 1</h3>
+                        <h3>Front-End Web Development</h3>
                         <!--<p class="pricing-sub">The standard version</p>
                         <div class="pricing">
                             <div class="price"><span>$</span>19</div>
@@ -250,7 +260,7 @@
                 <!--Skill 2-->
                 <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.6s">
                     <div class="pricing-block-content">
-                        <h3>Skill 2</h3>
+                        <h3>Front-End Web Development</h3>
                         <!--<p class="pricing-sub">Most popular choice</p>
                         <div class="pricing">
                             <div class="price"><span>$</span>29</div>
@@ -271,7 +281,7 @@
                 <!--Skill 3-->
                 <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.8s">
                     <div class="pricing-block-content">
-                        <h3>Skill 3</h3>
+                        <h3>Software Engineering</h3>
                         <!--<p class="pricing-sub">For the whole team</p>
                         <div class="pricing">
                             <div class="price"><span>$</span>49</div>
