--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <!--End of Resume Button-->
                     <!--Newsletter-->
                     <div style="display: inline; padding-left: 10px;">
-                      <a href="http://preview.mailerlite.com/s4c4e6" class="button" target="_blank">November Newsletter</a>
+                      <a href="http://preview.mailerlite.com/r5t9l3" class="button" target="_blank">November Newsletter</a>
                     </div>
                     <!--End of Newsletter-->
                 </div>
