--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="col-2-3">
                   <div class="section-heading">
                       <h2 class="section-title">About Me</h2>
-                      <p> Hey there! I'm Jack, a grade 11 student who attends Upper Canada College. I am passionate about artificial intelligence, cryptocurrency, robotics, and health technology. As well, I have developed a strong interest for web development. This is my first monthly newsletter update about what I have been doing and what's ahead. </p>
+                      <p> Hey there! I'm Jack, a grade 11 student who attends Upper Canada College. I am passionate about artificial intelligence, cryptocurrency, robotics, and health technology. As well, I have developed a strong interest for web development. </p>
                   </div>
 
             </div>
