--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                         <div id="logo">
 
                             <!--Logo that is shown on the banner-->
-                            <img src="images/JD.jpg" id="banner-logo" alt="Banner Logo"/>
+                            <img src="images/NavLogo.jpg" id="banner-logo" alt="Banner Logo"/>
                             <!--End of Banner Logo-->
 
                             <!--The Logo that is shown on the sticky Navigation Bar-->
-                            <img src="images/JD.jpg" id="navigation-logo" alt="NavBar Logo"/>
+                            <img src="images/NavLogo.jpg" id="navigation-logo" alt="NavBar Logo"/>
                             <!--End of Navigation Logo-->
 
                         </div>
@@ -172,15 +172,6 @@
                       <h2 class="section-title">About Me</h2>
                       <p> Hey there! I'm Jack, a grade 11 student who attends Upper Canada College. I am passionate about artificial intelligence, cryptocurrency, robotics, and health technology. As well, I have developed a strong interest for web development. </p>
                 </div>
-                <div style="padding-top: 0px;">
-                    <p style="font-size: 22px; margin-top: 0px;"> <b> Education </b> </p>
-                    <br>
-                    <p>
-                </div>
-                <div>
-                    <p style="font-size: 22px;"> <b> Experience </b> </p>
-                </div>
-
 
             </div>
 
@@ -202,33 +193,32 @@
 
                     <div class="section-heading">
                         <h2 class="section-title">Projects</h2>
-                        <p>I love working on projects. I believe that they show you can work in a team and are passionate about its topic. Here are all the projects I have worked on. You can hover over the images of the projects to learn more about them. As well, you can click on them to go their website. <b> I am always interested in working on more projects so please feel free to reach out to me.</b> </p>
+                        <p>I love working on projects. I believe that they show your teamwork skills and passion for a topic. Here are projects I have worked on. You can hover over the images of the projects to learn more about them. As well, you can click on them to go their website. <b> <br> I am always interested in working on more projects so please feel free to reach out to me.</b> </p>
                     </div>
 
                 </div>
 
 
                 <div class="col-2-3">
-
-                    <a href="https://zhast.github.io/MoneySmart/index.html" target="_blank" class="col-3">
-                        <img id="project" src="images/MoneySmart.png" alt="MoneySmart"/>
-                        <div class="Projects-overlay"><span> MoneySmart <br><br> A new financial literacy platform for high school students and young adults.</span></div>
+                    <div class="col-3" style="padding: 10px;">
+                    <a href="www.moneysmarts.tech" target="_blank">
+                            <img id="project" src="images/MoneySmart.jpg" alt="MoneySmart"/>
+                            <div class="Projects-overlay"><span> MoneySmart <br><br> A new financial literacy platform for high school students and young adults.</span></div>
                     </a>
-
-                    <a href="https://thacks2017.github.io/StockSee/" target="_blank" class="col-3">
-                        <img id="project" src="images/StockSee.png" alt="StockSee"/>
-                        <div class="Projects-overlay"><span> StockSee <br><br> A website created at the THacks2 hackathon that predicts the trends of popular stock sectors.</span></div>
-                    </a>
-                  
-                    <a href="https://www.thesynapseconference.ca" target="_blank" class="col-3">
+                </div>
+                  <div class="col-3" style="padding: 10px;">
+                    <a href="https://www.thesynapseconference.ca" target="_blank">
                         <img id="project" src="images/Synapse.png" alt="Company"/>
                         <div class="Projects-overlay"><span> The Synapse Conference <br><br> A neuroscience and mental health conference for high school students. It will take place in April 2018.</span></div>
                     </a>
+                </div>
 
-                    <a href="https://www.thermobeat.com" target="_blank" class="col-3">
+                <div class="col-3" style="padding: 10px;">
+                    <a href="https://www.thermobeat.com" target="_blank">
                         <img id="project" src="images/ThermoBeat.png" alt="ThermoBeat"/>
-                        <div class="Projects-overlay"><span> ThermoBeat <br><br> ThermoBeat is an innovative product that aims to replace modern pacemakers by eliminating the need for replacement through the utilization of thermal energy technology. </span></div>
+                        <div class="Projects-overlay"><span> ThermoBeat <br><br> ThermoBeat is an innovative product that disrupts the market for pacemakers by utilizing thermal energy technology. </span></div>
                     </a>
+                </div>
 
                 </div>
 
@@ -376,7 +366,7 @@
                         <p> You've reached the end of my website. Awesome! Feel free to contact me via email. You can also use the integrated message form below. </p>
                     
                     <div class="col-1">
-                        <div class="col-4" style="text-align: center; padding-top: 30px; padding-right: 50px;">
+                        <div class="col-4" style="text-align: center; padding-top: 60px; padding-right: 50px;">
 
                           <!--Email-->
                           <h4> <b> Email </b> </h4>
@@ -385,10 +375,6 @@
                           <!--Location-->
                           <h4> <b> Location </b> </h4>
                           <h5> <i class="fa fa-map-pin"> </i> Toronto, Canada </h5>
-
-                          <!--Subscribe to Newsletter-->
-                          <h4> <b> Subscribe to my Newsletter </b> </h4>
-                          <input placeholder="Email" style="width:100%;"></input>
 
                         </div>
 
@@ -413,21 +399,21 @@
                         <!--End of Map-->
 
                         <div class="col-2" style="padding-left: 40px; padding-top: 0px;"> 
-                            <form>
+                            <form action="" class="newsletter" id="mailchimp-signup" target="_blank" novalidate>
                                 <div class="col-3" style="padding-right:10px;">
-                                    <input style="width: 100%; height: 45px; border-radius: 6px;" placeholder="Name"></input>
+                                    <input style="width: 100%; height: 45px; border-radius: 4px;" placeholder="Name"></input>
                                 </div>
                                 <div class="col-3" style="padding-left:10px; padding-right:10px;">
-                                    <input style="width: 100%; height: 45px; border-radius: 6px;" placeholder="Email"></input>
+                                    <input style="width: 100%; height: 45px; border-radius: 4px;" placeholder="Email"></input>
                                 </div>
                                 <div class="col-3" style="padding-left:10px;">
-                                    <input style="width: 100%; height: 45px; border-radius: 6px;" placeholder="Subject"></input>
+                                    <input style="width: 100%; height: 45px; border-radius: 4px;" placeholder="Subject"></input>
                                 </div>
                                 <div class="col-1" style="padding-top: 0px;">
-                                    <textarea placeholder="Message" style="height: 130px; width:100%; border-radius: 15px; font-size:15px; font-family: 'Open Sans', sans-serif, Arial, Helvetica; font-weight: normal; color: #111; "></textarea>
+                                    <textarea placeholder="Message" style="height: 130px; width:100%; border-radius: 4x; font-size:15px; font-family: 'Open Sans', sans-serif, Arial, Helvetica; font-weight: normal; color: #111; "></textarea>
                                 </div>
                                 <div class="col-1" style="padding-top:0px; text-align: center;">
-                                    <input type="submit" style="width: 20%; border-radius: 20px;"></input>
+                                    <input type="submit" style="width: 20%; border-radius: 4px;"></input>
                                 </div>
                             </form>
 
