--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
                 <div class="col-3" style="padding: 10px;">
                     <a href="https://www.thermobeat.com" target="_blank">
-                        <img id="project" src="images/ThermoBeat.png" alt="ThermoBeat"/>
+                        <img id="project" src="images/ThermoBeat.jpg" alt="ThermoBeat"/>
                         <div class="Projects-overlay"><span> ThermoBeat <br><br> ThermoBeat is an innovative product that disrupts the market for pacemakers by utilizing thermal energy technology. </span></div>
                     </a>
                 </div>
