--- a/index.html
+++ b/index.html
@@ -212,20 +212,20 @@
 
 
                 <div class="col-2-3">
-                    <div class="col-3" style="padding: 10px;">
+                    <div class="col-3 icon-block icon-top wow fadeInUp" style="padding: 10px;">
                     <a href="www.moneysmarts.tech" target="_blank">
                             <img id="project" src="images/MoneySmart.jpg" alt="MoneySmart"/>
                             <div class="Projects-overlay"><span> MoneySmart <br><br> A new financial literacy platform for high school students and young adults.</span></div>
                     </a>
                 </div>
-                  <div class="col-3" style="padding: 10px;">
+                  <div class="col-3 icon-block icon-top wow fadeInUp" style="padding: 10px;">
                     <a href="https://www.thesynapseconference.ca" target="_blank">
                         <img id="project" src="images/Synapse.png" alt="Company"/>
                         <div class="Projects-overlay"><span> The Synapse Conference <br><br> A neuroscience and mental health conference for high school students. It will take place in April 2018.</span></div>
                     </a>
                 </div>
 
-                <div class="col-3" style="padding: 10px;">
+                <div class="col-3 icon-block icon-top wow fadeInUp" style="padding: 10px;">
                     <a href="https://www.thermobeat.com" target="_blank">
                         <img id="project" src="images/ThermoBeat.jpg" alt="ThermoBeat"/>
                         <div class="Projects-overlay"><span> ThermoBeat <br><br> ThermoBeat is an innovative product that disrupts the market for pacemakers by utilizing thermal energy technology. </span></div>
@@ -319,13 +319,65 @@
       <!--Awards-->
       <section id="Awards" class="text-center introduction clearfix scrollto" data-enllax-ratio=".2">
 
+        <div class="row clearfix" style="padding-top:35px; padding-bottom:10px;">
+
+                <div class="section-heading" style="padding-bottom:0px;">
+                    <h2 class="section-title" style="padding-bottom:0px;">Awards</h2>
+                </div>
+
+                <!--Skill 1-->
+                <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s" style="padding-top:0px;">
+                    <div class="pricing-block-content">
+                        <h3>Computer Science/Programming</h3>
+                        <br>
+                        <img style="width:56.5%;"src="images/ComputerScience.jpg" alt="Computer Science/Programming"/>
+                        <ul>
+                            <li>Thompson Prize for Grade 11 Computer Science (2016)</li>
+                            <li>Certificate of Distinction on Canadian Computing Contest (2017)</li>
+                        </ul>
+                    </div>
+                </div>
+                <!--End of Computer Science/Programming-->
+
+                <!--Mathematics-->
+                <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.6s" style="padding-top:0px;">
+                    <div class="pricing-block-content" style="padding-bottom:0px;">
+                        <h3>Mathematics</h3>
+                        <br>
+                        <img style="width:65%;" src="images/Mathematics.jpg" alt="Mathematics"/>
+                        <ul>
+                            <li>Perfect Score on Pascal Math Contest (2016)</li>
+                            <li>37th Place on Galois Math Contest (2017)</li>
+                            <li>Represented Upper Canada College at the Harvard MIT Mathematics Tournament (2016)</li>
+                        </ul>
+                    </div>
+                </div>
+                <!--End of Mathematics-->
+
+                <!--Other-->
+                <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.8s" style="padding-top:0px;">
+                    <div class="pricing-block-content" style="padding-bottom:0px;">
+                        <h3>Other</h3>
+                        <br>
+                        <img style="width:46.5%;" src="images/Award.jpg" alt="Other"/>
+                        <ul>
+                            <li>Silver (100 Hours) Community Service Award (2017)</li>
+                            <li>Upper Canada College Principal's List (2016)</li>
+                            <li>Top Defenceman Award for JV Soccer (2017)</li>
+                        </ul>
+                    </div>
+                </div>
+                <!--End of Other-->
+
+                <!-- Possible Awards Section
+
         <div class="row clearfix" style="padding-bottom:25px; padding-top:35px;">
 
                 <div class="section-heading">
                     <h2 class="section-title" style="padding-bottom:0px;">Awards</h2>
-                </div>
+                </div> 
 
-                <!--Computer Science/Programming-->
+                Computer Science/Programming
                 <blockquote class="col-3 testimonial classic" style="padding-top:0px;">
                     <img src="images/ComputerScience.jpg" alt="Computer Science/Programming"/>
                     <h4> <b> Computer Science/Programming </b> </h4>
@@ -335,9 +387,9 @@
 
                     </footer>
                 </blockquote>
-                <!--End of Computer Science/Programming Block-->
+                End of Computer Science/Programming Block
 
-                <!--Mathematics Block-->
+                Mathematics Block
                 <blockquote class="col-3 testimonial classic" style="padding-top:0px;">
                     <img src="images/Mathematics.jpg" alt="Mathematics"/>
                     <h4> <b> Mathematics </b> </h4>
@@ -348,9 +400,9 @@
 
                     </footer>
                 </blockquote>
-                <!--End of Mathematics Block-->
+                End of Mathematics Block
 
-                <!--Other Block-->
+                Other Block
                 <blockquote class="col-3 testimonial classic" style="padding-top:0px;">
                     <img src="images/Award.jpg" alt="Other"/>
                     <h4> <b> Other </b> </h4>
@@ -360,10 +412,12 @@
 
                     </footer>
                 </blockquote>
-                <!--End of Other Block-->
+                End of Other Block
 
             </div>
 
+                -->
+        
       </section>
       <!--End of Awards-->
 
