--- a/index.html
+++ b/index.html
@@ -147,8 +147,9 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>WELCOME! <br> MY NAME IS <br> JACK DOUGLAS.</h1>
-                    <h2>This website is a portfolio of my projects, skills, awards, and contact information.</h2>
+                    <h1>WELCOME! <br> MY NAME IS <br> JACK DOUGLAS</h1>
+                    <h3><b>Programming. Innovating. Advancing society.</b></h3>
+                    <h2 style="padding-top: 0px;"></h2>
                 </div>
 
 
