--- a/index.html
+++ b/index.html
@@ -178,17 +178,23 @@
 
       <section id="AboutMe" class="secondary-color introduction clearfix scrollto">
 
-        <div class="row clearfix" style="padding-top:35px;">
+        <div class="row clearfix" style="padding-top:10px; padding-bottom:20px;">
 
             <div class="col-2-3">
                 <div class="section-heading" style="padding-bottom: 0px;">
                       <h2 class="section-title">About Me</h2>
-                      <p> Hey there! I'm Jack, a grade 11 student who attends Upper Canada College. I am passionate about artificial intelligence, cryptocurrency, robotics, and health technology. As well, I have developed a strong interest for web development. </p>
+                      <p style="margin-top:5px; margin-bottom:5px;"> Hey there, I'm Jack. I am an avid programmer, math enthusiast, and passionate high school student at Upper Canada College. These characteristics define many of my interests, including three areas of innovation that I am researching: artificial intelligence, biotech, and blockchain. </p>
+                      <h4><b> Artificial Intelligence </b></h4>
+                      <p style="margin-top:5px; margin-bottom:5px;"> Artificial intelligence is an area of modern innovation that I find fascinating because it has so many applications in all aspects of our lives. Recently I have been focusing on researching machine learning with neural networks, a branch of artificial intelligence that is remarkably similar to how humans learn.  </p>
+                      <h4><b> Biotech </b></h4>
+                      <p style="margin-top:5px; margin-bottom:5px;"> The medical industry is changing by the day and for the better. However, I still believe that we are only scraping the surface in the potential of the biotech industry and its potential impact for human advancement. Thermobeat is a project that I am working that disrupts the technology for pacemakers. </p>
+                      <h4><b> Blockchain </b></h4>
+                      <p style="margin-top:5px; margin-bottom:5px;"> I became interested in blockchain initially after learning about cryptocurrencies last year. Blockchain is a new innovation I am interested in because it is incredibly new technology that is capable of changing how society functions. As I learn more about blockchain, I am excited by the variety of ways it can be applied.  </p>
                 </div>
 
             </div>
 
-            <div class="col-3" style="padding-top: 90px;">
+            <div class="col-3" style="padding-top: 155px;">
               <img style="text-align:center;" src="images/Headshot.png"></img>
             </div>
 
@@ -245,14 +251,14 @@
 
             <div class="row clearfix" style="padding-top:35px;">
 
-                <div class="section-heading">
-                    <h2 class="section-title">Skills</h2>
+                <div style="padding-bottom:0px;" class="section-heading">
+                    <h2 style="padding-bottom:0px;" class="section-title">Skills</h2>
                 </div>
 
                 <!--Skill 1-->
                 <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="pricing-block-content">
-                        <h3>Front-End Web Development</h3>
+                        <h3>Full Stack Developer</h3>
                         <!--<p class="pricing-sub">The standard version</p>
                         <div class="pricing">
                             <div class="price"><span>$</span>19</div>
@@ -273,7 +279,7 @@
                 <!--Skill 2-->
                 <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.6s">
                     <div class="pricing-block-content">
-                        <h3>Back-End Web Development</h3>
+                        <h3>Research Experience</h3>
                         <!--<p class="pricing-sub">Most popular choice</p>
                         <div class="pricing">
                             <div class="price"><span>$</span>29</div>
@@ -294,7 +300,7 @@
                 <!--Skill 3-->
                 <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.8s">
                     <div class="pricing-block-content">
-                        <h3>Software Engineering</h3>
+                        <h3>Management & Collaboration</h3>
                         <!--<p class="pricing-sub">For the whole team</p>
                         <div class="pricing">
                             <div class="price"><span>$</span>49</div>
@@ -430,18 +436,37 @@
                 <div class="section-heading">
                         <h2 class="section-title">Contact</h2>
                    
-                        <p> You've reached the end of my website. Awesome! Feel free to contact me via email. You can also use the integrated message form below. </p>
+                        <p> You've reached the end of my website. Awesome! Feel free to contact me through email or social media. You can also use the integrated message form below. </p>
                     
                     <div class="col-1">
-                        <div class="col-4" style="text-align: center; padding-top: 60px; padding-right: 50px;">
+                        <div class="col-4" style="text-align: center; padding-top: 35px; padding-right: 50px;">
 
                           <!--Email-->
                           <h4> <b> Email </b> </h4>
-                          <h5> <i class="fa fa-envelope"> </i> jackdouglas145@gmail.com </h5>
+                          <h5> <i style="width:20px;" class="fa fa-envelope fa-1x"> </i> jackdouglas145@gmail.com </h5>
 
                           <!--Location-->
                           <h4> <b> Location </b> </h4>
-                          <h5> <i class="fa fa-map-pin"> </i> Toronto, Canada </h5>
+                          <h5> <i style="width:20px;" class="fa fa-map-pin fa-1x"> </i> Toronto, Canada </h5>
+
+                          <h4> <b> Social </b> </h4>
+                          <ul class="social-icons" style="display: inline-flex; padding-top:7px;">
+                            <li>
+                                  <a style="color:#206fb3; width:60px;" target="_blank" title="LinkedIn" href="https://www.linkedin.com/in/jack-douglas-910896150/">
+                                    <i class="fa fa-linkedin-square fa-2x"></i><span>LinkedIn</span>
+                                  </a>
+                            </li>
+                            <li>
+                                  <a style="color:#000000; width:60px;" target="_blank" title="Github" href="https://github.com/J-Douglas/">
+                                    <i class="fa fa-github fa-2x"></i><span>Github</span>
+                                  </a>
+                            </li>
+                            <li>
+                                  <a style="color:#696867; width:60px;" target="_blank" title="Devpost" href="https://devpost.com/J-Douglas?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">
+                                    <i class="fa fa-code fa-2x"></i><span>Devpost</span>
+                                  </a>
+                            </li>
+                        </ul>
 
                         </div>
 
