--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <head lang="en">
     <meta charset="UTF-8">
 
+    <!--Page Title-->
+    <title>Jack Douglas</title>
+
+    <!--Meta Keywords and Description-->
+    <meta name="keywords" content="">
+    <meta name="description" content="A website for Jack Douglas that acts as a portfolio of projects, skills, and awards.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+
     <!-- Google Analytics -->
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -15,14 +23,6 @@
     ga('send', 'pageview');
     </script>
     <!-- End Google Analytics -->
-
-    <!--Page Title-->
-    <title>Jack Douglas</title>
-
-    <!--Meta Keywords and Description-->
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
     <!--Web Icon-->
     <link rel="shortcut icon" href="images/AlternateWebLogo.jpg" title="Favicon"/>
