--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                                     <input style="width: 100%; height: 45px; border-radius: 4px;" type="email" name="_replyto" placeholder="Email"></input>
                                 </div>
                                 <div class="col-3" style="padding-left:10px;">
-                                    <input type="hidden" name="_subject" value="New submission!" style="width: 100%; height: 45px; border-radius: 4px;" placeholder="Subject"></input>
+                                    <input name="_subject" value="New submission!" style="width: 100%; height: 45px; border-radius: 4px;" placeholder="Subject"></input>
                                 </div>
                                 <div class="col-1" style="padding-top: 0px;">
                                     <textarea placeholder="Message" name="message" style="height: 130px; width:100%; border-radius: 4x; font-size:15px; font-family: 'Open Sans', sans-serif, Arial, Helvetica; font-weight: normal; color: #111; "></textarea>
