--- a/index.html
+++ b/index.html
@@ -437,17 +437,17 @@
                         <h2 class="section-title">Contact</h2>
                     
                     <div class="col-1">
-                        <div class="col-4" style="text-align: center; padding-top: 35px; padding-right: 50px;">
+                        <div class="col-4" style="text-align: left; padding-top: 0px; padding-right: 50px;">
 
                           <!--Email-->
-                          <h4> <b> Email </b> </h4>
+                          <p style="font-family: 'Open Sans', sans-serif, Arial, Helvetica; font-size: 34px; font-weight: 300; color:#111;"> <u> Email </u> </p>
                           <h5> <i style="width:20px;" class="fa fa-envelope fa-1x"> </i> jackdouglas145@gmail.com </h5>
 
                           <!--Location-->
-                          <h4> <b> Location </b> </h4>
+                          <p style="font-family: 'Open Sans', sans-serif, Arial, Helvetica; font-size: 34px; font-weight: 300; color:#111;"> <u> Location </u> </p>
                           <h5> <i style="width:20px;" class="fa fa-map-pin fa-1x"> </i> Toronto, Canada </h5>
 
-                          <h4> <b> Social </b> </h4>
+                          <p style="font-family: 'Open Sans', sans-serif, Arial, Helvetica; font-size: 34px; font-weight: 300; color:#111;"> <u> Social </u> </p>
                           <ul class="social-icons" style="display: inline-flex; padding-top:7px;">
                             <li>
                                   <a style="color:#206fb3; width:60px;" target="_blank" title="LinkedIn" href="https://www.linkedin.com/in/jack-douglas-910896150/">
@@ -469,10 +469,10 @@
                         </div>
 
                         <div class="col-4">
-                            <p style="text-align: center; padding-top: 70px; font-family: 'Open Sans', sans-serif, Arial, Helvetica; font-size: 34px; font-weight: 300; color:#111;"> OR </h2>
+                            <p style="text-align: center; padding-top: 100px; font-family: 'Open Sans', sans-serif, Arial, Helvetica; font-size: 34px; font-weight: 300; color:#111;"> OR </h2>
                         </div>
 
-                        <div class="col-2" style="padding-left: 40px; padding-top: 0px;"> 
+                        <div class="col-2" style="padding-left: 40px; padding-top: 60px;"> 
                             <form action="https://formspree.io/jack.douglas@ucc.on.ca" method="POST">
                                 <div class="col-3" style="padding-right:10px;">
                                     <input style="width: 100%; height: 45px; border-radius: 4px;" type="text" name="name" placeholder="Name"></input>
