--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
                 <div class="col-2-3">
                     <div class="col-3 icon-block icon-top wow fadeInUp" style="padding: 10px;">
-                    <a href="www.moneysmarts.tech" target="_blank">
+                    <a href="https://www.moneysmarts.tech" target="_blank">
                             <img id="project" src="images/MoneySmart.jpg" alt="MoneySmart"/>
                             <div class="Projects-overlay"><span> MoneySmart <br><br> A new financial literacy platform for high school students and young adults.</span></div>
                     </a>
