--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <div style="padding-bottom: 80px;">
                     <!--Resume Button-->
                     <div style="display: inline;">
-                      <a href="documents/JackDouglasRésumé.pdf" class="button" target="_blank">My Resume</a>
+                      <a href="documents/JackDouglas2B.pdf" class="button" target="_blank">My Resume</a>
                     </div>
                     <!--End of Resume Button-->
                     <!--Newsletter-->
