Analytics, New Page for Links, and Metadata

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="./WebLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="keywords" content="Jack Douglas, University of Waterloo, Jack Douglas UWaterloo, Portfolio, Machine Learning, Machine Learning Research"/>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Jack Douglas is a 4A software engineering student at the University of Waterloo. He is passionate about data science, machine learning, and statistics."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
